--- a/app/templates/reader.html
+++ b/app/templates/reader.html
@@ -102,9 +102,9 @@
         </div>
     </div>
     <ul class="toggle-button">
-        <li><i class="icon-catalog"></i><span>目录</span></li>
-        <li><i class="icon-font"></i><span>字体</span></li>
-        <li><i class="icon-night"></i><span>夜间</span></li>
+        <li class="catalog-button"><i class="icon-catalog"></i><span>目录</span></li>
+        <li class="setting-button"><i class="icon-setting"></i><span>设置</span></li>
+        <li class="night-button"><i class="icon-night"></i><span>夜间</span></li>
     </ul>
 </div>
 <!--<div id="artical-action-wrapper">
