--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,85 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <!--<meta name="viewport"-->
+          <!--content="width=device-width, user-scalable=no,  maximum-scale=1.0, minimum-scale=1.0">-->
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Document</title>
     <style>
-        body,html {
+        *{
             padding: 0;
-            margin: 0
+            margin: 0;
         }
-        body {
-            /*padding-left:100px;*/
-            /*padding-right:200px;*/
-        }
-        .clearfix::after{
-            content: "";
-            display: table;
-            clear: both;
-        }
-        .left {
+        .box1{
+            width: 540px;
+            height: 540px;
             background: red;
-            width: 100px;
-            float: left;
-            margin-left: -100%;
-            /*position: relative;*/
-            /*left:-100px;*/
         }
-        .main {
-            background: blue;
-            width: 100%;
-            float: left;
-        }
-        .right {
-            background: red;
-            width: 200px;
-            float: left;
-            margin-left: -200px;
-            /*position:relative;*/
-            /*right:-200px;*/
-        }
-          .inner {
-              margin-left: 100px;
-              margin-right: 200px;
-          }
     </style>
 </head>
-<body class="clearfix">
-<div class="main"><div class="inner"><h1>Main</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad consectetur corporis doloremque ea esse id
-        ipsum maiores, molestias, natus nostrum provident ratione repellendus reprehenderit sunt unde vero. Cum,
-        obcaecati!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad consectetur corporis doloremque ea esse id
-        ipsum maiores, molestias, natus nostrum provident ratione repellendus reprehenderit sunt unde vero. Cum,
-        obcaecati!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad consectetur corporis doloremque ea esse id
-        ipsum maiores, molestias, natus nostrum provident ratione repellendus reprehenderit sunt unde vero. Cum,
-        obcaecati!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad consectetur corporis doloremque ea esse id
-        ipsum maiores, molestias, natus nostrum provident ratione repellendus reprehenderit sunt unde vero. Cum,
-        obcaecati!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad consectetur corporis doloremque ea esse id
-        ipsum maiores, molestias, natus nostrum provident ratione repellendus reprehenderit sunt unde vero. Cum,
-        obcaecati!</p></div></div>
-<div class="left"><h1>Left</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur dolor iusto laudantium
-        necessitatibus similique ut, veniam voluptas. Ad, aliquam blanditiis debitis deleniti est et inventore
-        reprehenderit veritatis? Culpa, voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur dolor iusto laudantium
-        necessitatibus similique ut, veniam voluptas. Ad, aliquam blanditiis debitis deleniti est et inventore
-        reprehenderit veritatis? Culpa, voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur dolor iusto laudantium
-        necessitatibus similique ut, veniam voluptas. Ad, aliquam blanditiis debitis deleniti est et inventore
-        reprehenderit veritatis? Culpa, voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur dolor iusto laudantium
-        necessitatibus similique ut, veniam voluptas. Ad, aliquam blanditiis debitis deleniti est et inventore
-        reprehenderit veritatis? Culpa, voluptate!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequatur dolor iusto laudantium
-        necessitatibus similique ut, veniam voluptas. Ad, aliquam blanditiis debitis deleniti est et inventore
-        reprehenderit veritatis? Culpa, voluptate!</p></div>
-<div class="right"><h1>Right</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores delectus deleniti dignissimos dolores
-        eius est fugit id magni minus molestiae, nam necessitatibus qui repudiandae saepe suscipit tenetur ullam
-        unde.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores delectus deleniti dignissimos dolores
-        eius est fugit id magni minus molestiae, nam necessitatibus qui repudiandae saepe suscipit tenetur ullam
-        unde.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores delectus deleniti dignissimos dolores
-        eius est fugit id magni minus molestiae, nam necessitatibus qui repudiandae saepe suscipit tenetur ullam
-        unde.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores delectus deleniti dignissimos dolores
-        eius est fugit id magni minus molestiae, nam necessitatibus qui repudiandae saepe suscipit tenetur ullam
-        unde.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores delectus deleniti dignissimos dolores
-        eius est fugit id magni minus molestiae, nam necessitatibus qui repudiandae saepe suscipit tenetur ullam
-        unde.</p></div>
+<body>
+    <div class="box1"></div>
 </body>
 </html>
