--- a/app/css/reader.scss
+++ b/app/css/reader.scss
@@ -1,9 +1,7 @@
 @import "function";
 
-html{font-size:10px}
-@media screen and (min-width:321px) and (max-width:375px){html{font-size:11px}}
-@media screen and (min-width:376px) and (max-width:414px){html{font-size:12px}}
-@media screen and (min-width:415px) and (max-width:639px){html{font-size:15px}}
+@media screen and (max-width:413px){html{font-size:13px}}
+@media screen and (min-width:414px) and (max-width:639px){html{font-size:15px}}
 @media screen and (min-width:640px) and (max-width:719px){html{font-size:20px}}
 @media screen and (min-width:720px) and (max-width:749px){html{font-size:22.5px}}
 @media screen and (min-width:750px) and (max-width:799px){html{font-size:23.5px}}
@@ -13,7 +11,7 @@ html{font-size:10px}
     background: #E9DFC7;
 }
 
-#article-fiction {
+#article-fiction{
     padding: 0 1rem;
     h4 {
         font-size: 1.42rem;
@@ -33,7 +31,7 @@ html{font-size:10px}
 
 #footbar-fiction {
     padding: 1rem;
-    .toggle-tab {
+    .toggle-tab { 
         width: 19rem;
         height: 2.42rem;
         margin: 0.71rem auto;
